k8s/namespaces/thehive/00-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: thehive
  labels:
    app.kubernetes.io/name: thehive
    app.kubernetes.io/part-of: thehive
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: thehive
  labels:
    app.kubernetes.io/name: thehive
    app.kubernetes.io/part-of: thehive
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
